# export_api_symbols

./: .ccls  .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
add_library/: CMakeLists.txt  add.cpp  add.hpp  header.h
common/: header.h
mul_library/: mul.cpp  mul.hpp
sub_library/: CMakeLists.txt  sub.cpp  sub.hpp
sub_library/jni/: Android.mk
